--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
 version: '3.8'
 services:
-  web:
-    container_name: werkzeugverwaltung_web
+  client:
+    container_name: werkzeugverwaltung_client
     build:
-      context: ./
+      context: ./client
     volumes:
-      - .:/app
+      - ./client:/app
       - /app/node_modules
-    command: npm run dev
     ports:
       - "3000:3000"
     environment:
       NODE_ENV: development
+
+  server: 
+    container_name: werkzeugverwaltung_server
+    build: 
+      context: ./server
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    ports:
+      - "8080:8080"
+    
