--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,12 +2,15 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY ./package.json package-lock.json ./
+COPY ./package.json package-lock.json* ./
 
-RUN npm install
+RUN npm ci
 
-COPY . .
-
-EXPOSE 3000
+COPY src ./src
+COPY public ./public
+COPY jsconfig.json ./
+COPY next.config.mjs ./
+COPY postcss.config.mjs ./
+COPY tailwind.config.js ./
 
 CMD ["npm", "run", "dev"]
