--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - ./client/public:/app/public
       - ./client/src:/app/src
+      - ./client/styles:/app/styles
     ports:
       - "3000:3000"
     environment:
@@ -36,3 +37,4 @@ services:
           - '3306:3306'
     volumes:
       - ./docker/mysql/volume:/var/lib/mysql
+      # - ./init:/docker-entrypoint-initdb.d
