--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,40 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-client/node_modules/*
-server/node_modules/*
-
-docker/mysql/volume
-
+/node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
-.js
-client/.next
+# testing
+/coverage
+
+# next.js
+/.next/
 /out/
 
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # local env files
 .env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+.js
+
+docker/mysql/volume
