--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - ./public:/app/public
       - ./src:/app/src
+      - ./prisma:/app/prisma
+
     ports:
       - "3000:3000"
     environment:
@@ -20,10 +22,10 @@ services:
     restart: always
     command: mysqld --mysql-native-password=ON
     environment:
-          MYSQL_ROOT_PASSWORD: 'password'
-          MYSQL_DATABASE: 'werkzeugverwaltung'
+      MYSQL_ROOT_PASSWORD: "password"
+      MYSQL_DATABASE: "werkzeugverwaltung"
     ports:
-          - '3306:3306'
+      - "3306:3306"
     volumes:
       - ./docker/mysql/volume:/var/lib/mysql
       # - ./init:/docker-entrypoint-initdb.d
