--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.0.0",
 		"@prisma/client": "^5.13.0",
+		"bcrypt": "^5.1.1",
 		"next": "14.2.3",
 		"next-auth": "^5.0.0-beta.17",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
