--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.0.0",
+		"@headlessui/react": "^2.0.3",
+		"@heroicons/react": "^2.1.3",
 		"@prisma/client": "^5.13.0",
 		"bcrypt": "^5.1.1",
 		"next": "14.2.3",
