--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="mysql://root:password@werkzeugverwaltung_mysql:3306/werkzeugverwaltung"
 # DATABASE_URL="mysql://root:password@localhost:3306/werkzeugverwaltung"
-AUTH_SECRET="WDEo7h4ch0Tys28xTk506oZx/wMzOVRpd2//Sy0n3z8="
+AUTH_SECRET=secret
