--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
 		"@auth/prisma-adapter": "^2.0.0",
 		"@headlessui/react": "^2.0.3",
 		"@heroicons/react": "^2.1.3",
+		"@hookform/resolvers": "^3.4.2",
 		"@prisma/client": "^5.13.0",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-slot": "^1.0.2",
 		"bcrypt": "^5.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
 		"next": "14.2.3",
 		"next-auth": "^5.0.0-beta.17",
 		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
-		"tailwind-datepicker-react": "^1.4.3",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -27,7 +37,7 @@
 		"eslint-config-next": "14.2.3",
 		"postcss": "^8",
 		"prisma": "^5.14.0",
-		"tailwindcss": "^3.4.1"
+		"tailwindcss": "^3.4.3"
 	},
 	"prisma": {
 		"seed": "node prisma/seed.js",
