--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-drag-drop-files": "^2.3.10",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
