--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
 		"@heroicons/react": "^2.1.3",
 		"@hookform/resolvers": "^3.4.2",
 		"@prisma/client": "^5.13.0",
+		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-toast": "^1.1.5",
 		"bcrypt": "^5.1.1",
